# ca-cc

./: CMakeLists.txt  README.md  package.xml
launch/: map.launch  run.launch  segment.launch
maps/: final_demo.pgm  final_demo.yaml  my_floor.pgm  my_floor.yaml  my_world.pgm  my_world.yaml
models/: README.md
models/sun_final/: model.config  model.sdf
models/sun_final/meshes/: model.dae
models/sun_floor/: model.config  model.sdf
models/sun_floor/meshes/: model.dae
scripts/: address_translator.py  joy.py  joy_rcc8.py  path.py  rcc8.py  rcc8_ui.py  reactor.py  sun.pl
src/: FindSegments.cpp  SendGoal.cpp
worlds/: final_demo.world  my_floor.world  my_world.world
